Prevent useless vertical scrollbars due to subscripts.

--- a/css/global.css
+++ b/css/global.css
@@ -395,6 +395,10 @@ sub {
     top: 0.4em;
 }
 
+p {
+    overflow-y: hidden;
+}
+
 
 html:before {
     display: none;
